--- a/src/main/java/com/opaleye/ganseq/MainStage.fxml
+++ b/src/main/java/com/opaleye/ganseq/MainStage.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -13,19 +14,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane prefHeight="847.0" prefWidth="1258.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.opaleye.ganseq.RootController">
+<AnchorPane prefHeight="847.0" prefWidth="1258.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.opaleye.ganseq.RootController">
    <children>
       <ToolBar layoutX="14.0" layoutY="14.0" prefHeight="43.0" prefWidth="1226.0">
          <items>
             <HBox prefHeight="33.0" prefWidth="1200.0" spacing="10.0">
                <children>
-                  <Button fx:id="openRefButton" mnemonicParsing="false" onAction="#handleOpenRef" prefHeight="23.0" prefWidth="170.0" text="Open Reference File">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                  </Button>
                   <Button fx:id="OpenFwdTraceButton" mnemonicParsing="false" onAction="#handleOpenFwdTrace" prefHeight="23.0" prefWidth="187.0" text="Open Forward Trace File" />
                   <Button fx:id="OpenRevTraceButton" mnemonicParsing="false" onAction="#handleOpenRevTrace" prefHeight="23.0" prefWidth="180.0" text="Open Reverse Trace File" />
+                  <Label prefHeight="15.0" prefWidth="146.0" text="Target Region : " />
+                  <ComboBox fx:id="cb_targetRegion" prefWidth="150.0" />
                   <HBox alignment="CENTER_RIGHT" prefHeight="23.0" prefWidth="720.0">
                      <children>
                         <CheckBox fx:id="cb_hetIndelMode" mnemonicParsing="false" text="Hetero indel optimization mode">
@@ -48,7 +46,6 @@
       <ScrollPane fx:id="fwdPane" layoutX="14.0" layoutY="224.0" prefHeight="170.0" prefWidth="1238.0" />
       <ScrollPane fx:id="revPane" layoutX="14.0" layoutY="432.0" prefHeight="170.0" prefWidth="1238.0" />
       <Label layoutX="14.0" layoutY="70.0" prefHeight="15.0" prefWidth="101.0" text="Reference File : " />
-      <Label fx:id="refFileLabel" layoutX="132.0" layoutY="70.0" prefHeight="6.0" prefWidth="788.0" />
       <Label layoutX="14.0" layoutY="202.0" text="Forward Trace File : " />
       <Label fx:id="fwdTraceFileLabel" layoutX="133.0" layoutY="202.0" prefHeight="15.0" prefWidth="1048.0" />
       <Label layoutX="16.0" layoutY="405.0" text="Reverse Trace File : " />
