--- a/src/main/java/com/opaleye/ganseq/MainStage.fxml
+++ b/src/main/java/com/opaleye/ganseq/MainStage.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -26,11 +25,11 @@
                   <ComboBox fx:id="cb_targetRegion" prefWidth="150.0" />
                   <HBox alignment="CENTER_RIGHT" prefHeight="23.0" prefWidth="720.0">
                      <children>
-                        <CheckBox fx:id="cb_hetIndelMode" mnemonicParsing="false" text="Hetero indel optimization mode">
-                           <padding>
-                              <Insets right="20.0" />
-                           </padding>
-                        </CheckBox>
+                        <Button fx:id="btnEditBase" mnemonicParsing="false" onAction="#handleEditBase" text="Edit base">
+                           <HBox.margin>
+                              <Insets right="10.0" />
+                           </HBox.margin>
+                        </Button>
                         <Button fx:id="btn_settings" mnemonicParsing="false" onAction="#handleSettings" text="Settings" />
                         <Label prefHeight="15.0" prefWidth="14.0" />
                         <Button fx:id="runButton" mnemonicParsing="false" onAction="#handleRun" prefHeight="23.0" prefWidth="84.0" text="Run" />
@@ -61,7 +60,7 @@
       <columns>
       <TableColumn prefWidth="500" text="Species" />
       <TableColumn prefWidth="180" text="Accession" />
-      <TableColumn prefWidth="50" text ="qLen" />
+      <TableColumn prefWidth="50" text="qLen" />
       <TableColumn prefWidth="50" text="Score" />
       </columns>
       </TableView>
