--- a/src/main/java/com/opaleye/ganseq/MainStage.fxml
+++ b/src/main/java/com/opaleye/ganseq/MainStage.fxml
@@ -42,8 +42,8 @@
             </HBox>
          </items>
       </ToolBar>
-      <ScrollPane fx:id="fwdPane" layoutX="14.0" layoutY="224.0" prefHeight="170.0" prefWidth="907.0" />
-      <ScrollPane fx:id="revPane" layoutX="14.0" layoutY="432.0" prefHeight="170.0" prefWidth="907.0" />
+      <ScrollPane fx:id="fwdPane" layoutX="14.0" layoutY="224.0" prefHeight="170.0" prefWidth="879.0" />
+      <ScrollPane fx:id="revPane" layoutX="14.0" layoutY="432.0" prefHeight="170.0" prefWidth="879.0" />
       <Label layoutX="14.0" layoutY="70.0" prefHeight="18.0" prefWidth="126.0" text="Alignment">
          <font>
             <Font name="System Bold" size="14.0" />
@@ -122,5 +122,9 @@
       <Button layoutX="793.0" layoutY="606.0" mnemonicParsing="false" onAction="#handleCSV" prefHeight="23.0" prefWidth="126.0" text="Generate CSV" />
       <Button layoutX="660.0" layoutY="198.0" mnemonicParsing="false" onAction="#handleFwdEditTrimming" prefHeight="23.0" prefWidth="126.0" text="Edit Trimming" />
       <Button layoutX="660.0" layoutY="401.0" mnemonicParsing="false" onAction="#handleRevEditTrimming" prefHeight="23.0" prefWidth="126.0" text="Edit Trimming" />
+      <Button fx:id="fwdZoomInButton" layoutX="894.0" layoutY="224.0" mnemonicParsing="false" onAction="#handleFwdZoomIn" prefHeight="83.0" prefWidth="28.0" text="+" />
+      <Button fx:id="fwdZoomOutButton" layoutX="894.0" layoutY="309.0" mnemonicParsing="false" onAction="#handleFwdZoomOut" prefHeight="83.0" prefWidth="28.0" text="-" />
+      <Button fx:id="revZoomInButton" layoutX="894.0" layoutY="432.0" mnemonicParsing="false" onAction="#handleRevZoomIn" prefHeight="83.0" prefWidth="28.0" text="+" />
+      <Button fx:id="revZoomOutButton" layoutX="894.0" layoutY="517.0" mnemonicParsing="false" onAction="#handleRevZoomOut" prefHeight="83.0" prefWidth="28.0" text="-" />
    </children>
 </AnchorPane>
