--- a/src/main/java/com/opaleye/ganseq/Trim.fxml
+++ b/src/main/java/com/opaleye/ganseq/Trim.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="328.0" prefWidth="1263.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.opaleye.ganseq.TrimController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="328.0" prefWidth="1263.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.opaleye.ganseq.TrimController">
    <children>
-      <ScrollPane fx:id="tracePane" layoutX="13.0" layoutY="87.0" prefHeight="200.0" prefWidth="1238.0" />
+      <ScrollPane fx:id="tracePane" layoutX="13.0" layoutY="87.0" prefHeight="200.0" prefWidth="1200.0" />
       <Label layoutX="356.0" layoutY="4.0" text="Click on the Trace to Trim Ends (Shaded areas will be trimmed)">
          <font>
             <Font size="18.0" />
@@ -25,5 +26,7 @@
          </font>
       </Label>
       <Button fx:id="resetButton" layoutX="1194.0" layoutY="61.0" mnemonicParsing="false" onAction="#handleReset" text="Reset" />
+      <Button fx:id="zoomInButton" layoutX="1218.0" layoutY="87.0" mnemonicParsing="false" onAction="#handleZoomIn" prefHeight="99.0" prefWidth="28.0" text="+" />
+      <Button fx:id="zoomOutButton" layoutX="1218.0" layoutY="188.0" mnemonicParsing="false" onAction="#handleZoomOut" prefHeight="99.0" prefWidth="28.0" text="-" />
    </children>
 </AnchorPane>
