--- a/src/main/java/com/opaleye/snackntm/settings.fxml
+++ b/src/main/java/com/opaleye/snackntm/settings.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="670.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.opaleye.ganseq.settings.SettingsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="670.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.opaleye.snackntm.settings.SettingsController">
    <children>
       <Button fx:id="btn_confirm" layoutX="584.0" layoutY="205.0" mnemonicParsing="false" onAction="#handleConfirm" text="Confirm" />
       <Button fx:id="btn_default" layoutX="464.0" layoutY="205.0" mnemonicParsing="false" onAction="#handleDefault" text="Restore Default" />
