--- a/src/main/java/com/opaleye/snackntm/MainStage.fxml
+++ b/src/main/java/com/opaleye/snackntm/MainStage.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
@@ -14,25 +15,26 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="847.0" prefWidth="1128.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.opaleye.snackntm.RootController">
+<AnchorPane prefHeight="847.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.opaleye.snackntm.RootController">
    <children>
-      <ToolBar layoutX="14.0" layoutY="14.0" prefHeight="43.0" prefWidth="907.0">
+      <ToolBar layoutX="5.0" layoutY="20.0" prefHeight="43.0" prefWidth="1072.0">
          <items>
-            <HBox prefHeight="33.0" prefWidth="890.0" spacing="10.0">
+            <HBox prefHeight="33.0" prefWidth="1060.0" spacing="10.0">
                <children>
                   <Button fx:id="OpenTraceButton" mnemonicParsing="false" onAction="#handleOpenTrace" prefHeight="23.0" prefWidth="169.0" text="Open Trace Files" />
                   <Label prefHeight="15.0" prefWidth="98.0" text="Target Region : " />
                   <ComboBox fx:id="cb_targetRegion" prefWidth="150.0" />
-                  <HBox alignment="CENTER_RIGHT" prefHeight="23.0" prefWidth="258.0">
+                  <HBox alignment="CENTER_RIGHT" prefHeight="23.0" prefWidth="600.0">
                      <children>
-                        <Button fx:id="runButton" mnemonicParsing="false" onAction="#handleRun" prefHeight="23.0" prefWidth="84.0" text="Run" />
                         <Button fx:id="btnEditBase" mnemonicParsing="false" onAction="#handleEditBase" text="Edit base">
                            <HBox.margin>
                               <Insets right="10.0" />
                            </HBox.margin>
                         </Button>
                         <Button fx:id="btn_settings" mnemonicParsing="false" onAction="#handleSettings" text="Settings" />
-                        <Label prefHeight="15.0" prefWidth="14.0" />
+                        <Label prefHeight="15.0" prefWidth="10.0" />
+                        <Button fx:id="runButton" mnemonicParsing="false" onAction="#handleRun" prefHeight="23.0" prefWidth="84.0" text="Run" />
+                        <Label prefHeight="15.0" prefWidth="10.0" />
                      </children>
                   </HBox>
                </children>
@@ -42,20 +44,20 @@
             </HBox>
          </items>
       </ToolBar>
-      <ScrollPane fx:id="fwdPane" layoutX="14.0" layoutY="224.0" prefHeight="170.0" prefWidth="879.0" />
-      <ScrollPane fx:id="revPane" layoutX="14.0" layoutY="432.0" prefHeight="170.0" prefWidth="879.0" />
-      <Label layoutX="14.0" layoutY="70.0" prefHeight="18.0" prefWidth="126.0" text="Alignment">
+      <ScrollPane fx:id="fwdPane" layoutX="170.0" layoutY="230.0" prefHeight="170.0" prefWidth="879.0" />
+      <ScrollPane fx:id="revPane" layoutX="170.0" layoutY="438.0" prefHeight="170.0" prefWidth="879.0" />
+      <Label layoutX="170.0" layoutY="76.0" prefHeight="18.0" prefWidth="126.0" text="Alignment">
          <font>
             <Font name="System Bold" size="14.0" />
          </font></Label>
-      <Label layoutX="14.0" layoutY="202.0" text="Forward Trace File : " />
-      <Label fx:id="fwdTraceFileLabel" layoutX="133.0" layoutY="202.0" prefHeight="15.0" prefWidth="660.0" />
-      <Label layoutX="16.0" layoutY="405.0" text="Reverse Trace File : " />
-      <Label fx:id="revTraceFileLabel" layoutX="133.0" layoutY="405.0" prefHeight="15.0" prefWidth="660.0" />
-      <ScrollPane fx:id="alignmentPane" layoutX="14.0" layoutY="94.0" prefHeight="105.0" prefWidth="907.0" />
-      <Button fx:id="removeFwd" layoutX="795.0" layoutY="198.0" mnemonicParsing="false" onAction="#handleRemoveFwd" prefHeight="23.0" prefWidth="126.0" text="Remove Fwd Trace" />
-      <Button fx:id="removeRev" layoutX="795.0" layoutY="401.0" mnemonicParsing="false" onAction="#handleRemoveRev" prefHeight="23.0" prefWidth="126.0" text="Remove Rev Trace" />
-      <ScrollPane fx:id="variantListPane" layoutX="14.0" layoutY="631.0" prefHeight="195.0" prefWidth="907.0">
+      <Label layoutX="170.0" layoutY="208.0" text="Forward Trace File : " />
+      <Label fx:id="fwdTraceFileLabel" layoutX="289.0" layoutY="208.0" prefHeight="15.0" prefWidth="660.0" />
+      <Label layoutX="172.0" layoutY="411.0" text="Reverse Trace File : " />
+      <Label fx:id="revTraceFileLabel" layoutX="289.0" layoutY="411.0" prefHeight="15.0" prefWidth="660.0" />
+      <ScrollPane fx:id="alignmentPane" layoutX="170.0" layoutY="100.0" prefHeight="105.0" prefWidth="907.0" />
+      <Button fx:id="removeFwd" layoutX="951.0" layoutY="204.0" mnemonicParsing="false" onAction="#handleRemoveFwd" prefHeight="23.0" prefWidth="126.0" text="Remove Fwd Trace" />
+      <Button fx:id="removeRev" layoutX="951.0" layoutY="407.0" mnemonicParsing="false" onAction="#handleRemoveRev" prefHeight="23.0" prefWidth="126.0" text="Remove Rev Trace" />
+      <ScrollPane fx:id="variantListPane" layoutX="170.0" layoutY="637.0" prefHeight="195.0" prefWidth="907.0">
       <TableView fx:id="speciesTable" prefHeight="190" prefWidth="903.0">
       <columns>
       <TableColumn prefWidth="400" text="Species" />
@@ -67,8 +69,8 @@
       </columns>
       </TableView>
       </ScrollPane>
-      <Accordion />
-      <AnchorPane layoutX="930.0" layoutY="2.0" prefHeight="827.0" prefWidth="300.0">
+      <Accordion layoutX="156.0" layoutY="6.0" />
+      <AnchorPane layoutX="1086.0" layoutY="8.0" prefHeight="827.0" prefWidth="300.0">
          <children>
             <Label layoutX="7.0" layoutY="12.0" prefHeight="21.0" prefWidth="207.0" text="Identification Result">
                <font>
@@ -113,18 +115,40 @@
             <Label fx:id="chimaeraSeqLabel" layoutX="14.0" layoutY="770.0" prefHeight="15.0" prefWidth="280.0" />
          </children>
       </AnchorPane>
-      <Label layoutX="14.0" layoutY="613.0" prefHeight="18.0" prefWidth="150.0" text="Result">
+      <Label layoutX="170.0" layoutY="619.0" prefHeight="18.0" prefWidth="150.0" text="Result">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Separator layoutX="926.0" layoutY="-6.0" orientation="VERTICAL" prefHeight="847.0" prefWidth="0.0" />
-      <Button layoutX="793.0" layoutY="606.0" mnemonicParsing="false" onAction="#handleCSV" prefHeight="23.0" prefWidth="126.0" text="Generate CSV" />
-      <Button layoutX="660.0" layoutY="198.0" mnemonicParsing="false" onAction="#handleFwdEditTrimming" prefHeight="23.0" prefWidth="126.0" text="Edit Trimming" />
-      <Button layoutX="660.0" layoutY="401.0" mnemonicParsing="false" onAction="#handleRevEditTrimming" prefHeight="23.0" prefWidth="126.0" text="Edit Trimming" />
-      <Button fx:id="fwdZoomInButton" layoutX="894.0" layoutY="224.0" mnemonicParsing="false" onAction="#handleFwdZoomIn" prefHeight="83.0" prefWidth="28.0" text="+" />
-      <Button fx:id="fwdZoomOutButton" layoutX="894.0" layoutY="309.0" mnemonicParsing="false" onAction="#handleFwdZoomOut" prefHeight="83.0" prefWidth="28.0" text="-" />
-      <Button fx:id="revZoomInButton" layoutX="894.0" layoutY="432.0" mnemonicParsing="false" onAction="#handleRevZoomIn" prefHeight="83.0" prefWidth="28.0" text="+" />
-      <Button fx:id="revZoomOutButton" layoutX="894.0" layoutY="517.0" mnemonicParsing="false" onAction="#handleRevZoomOut" prefHeight="83.0" prefWidth="28.0" text="-" />
+      <Separator layoutX="1082.0" orientation="VERTICAL" prefHeight="847.0" prefWidth="0.0" />
+      <Button layoutX="949.0" layoutY="612.0" mnemonicParsing="false" onAction="#handleCSV" prefHeight="23.0" prefWidth="126.0" text="Generate CSV" />
+      <Button layoutX="816.0" layoutY="204.0" mnemonicParsing="false" onAction="#handleFwdEditTrimming" prefHeight="23.0" prefWidth="126.0" text="Edit Trimming" />
+      <Button layoutX="816.0" layoutY="407.0" mnemonicParsing="false" onAction="#handleRevEditTrimming" prefHeight="23.0" prefWidth="126.0" text="Edit Trimming" />
+      <Button fx:id="fwdZoomInButton" layoutX="1050.0" layoutY="230.0" mnemonicParsing="false" onAction="#handleFwdZoomIn" prefHeight="83.0" prefWidth="28.0" text="+" />
+      <Button fx:id="fwdZoomOutButton" layoutX="1050.0" layoutY="315.0" mnemonicParsing="false" onAction="#handleFwdZoomOut" prefHeight="83.0" prefWidth="28.0" text="-" />
+      <Button fx:id="revZoomInButton" layoutX="1050.0" layoutY="438.0" mnemonicParsing="false" onAction="#handleRevZoomIn" prefHeight="83.0" prefWidth="28.0" text="+" />
+      <Button fx:id="revZoomOutButton" layoutX="1050.0" layoutY="523.0" mnemonicParsing="false" onAction="#handleRevZoomOut" prefHeight="83.0" prefWidth="28.0" text="-" />
+      <ScrollPane layoutX="7.0" layoutY="100.0" prefHeight="556.0" prefWidth="150.0">
+         <content>
+            <ListView fx:id="sampleListView" prefHeight="552.0" prefWidth="145.0" />
+         </content>
+      </ScrollPane>
+      <Separator layoutX="157.0" layoutY="65.0" orientation="VERTICAL" prefHeight="779.0" prefWidth="6.0" />
+      <Label layoutX="8.0" layoutY="76.0" prefHeight="18.0" prefWidth="126.0" text="Sample List">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="6.0" layoutY="660.0" prefHeight="18.0" prefWidth="126.0" text="Target Regions">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <TableView fx:id="targetTable" layoutX="5.0" layoutY="685.0" prefHeight="150.0" prefWidth="150.0">
+        <columns>
+          <TableColumn prefWidth="55.000030517578125" text="Target" />
+          <TableColumn prefWidth="94.99993896484375" text="Input" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
