--- a/src/main/java/com/opaleye/snackntm/MainStage.fxml
+++ b/src/main/java/com/opaleye/snackntm/MainStage.fxml
@@ -3,9 +3,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
@@ -22,9 +22,18 @@
             <HBox prefHeight="33.0" prefWidth="1060.0" spacing="10.0">
                <children>
                   <Button fx:id="OpenTraceButton" mnemonicParsing="false" onAction="#handleOpenTrace" prefHeight="23.0" prefWidth="169.0" text="Open Trace Files" />
-                  <Label prefHeight="15.0" prefWidth="98.0" text="Target Region : " />
-                  <ComboBox fx:id="cb_targetRegion" prefWidth="150.0" />
-                  <HBox alignment="CENTER_RIGHT" prefHeight="23.0" prefWidth="600.0">
+                  <HBox prefHeight="23.0" prefWidth="556.0" spacing="10.0">
+                     <children>
+                        <Label prefHeight="15.0" prefWidth="98.0" text="Target Region : " />
+                        <RadioButton fx:id="s16Radio" mnemonicParsing="false" prefHeight="16.0" prefWidth="97.0" text="16S rRNA" />
+                        <RadioButton fx:id="rpoRadio" mnemonicParsing="false" prefHeight="16.0" prefWidth="69.0" text="rpo" />
+                        <RadioButton fx:id="tufRadio" mnemonicParsing="false" prefHeight="16.0" prefWidth="97.0" text="tuf" />
+                     </children>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </HBox>
+                  <HBox alignment="CENTER_RIGHT" prefHeight="23.0" prefWidth="311.0">
                      <children>
                         <Button fx:id="btnEditBase" mnemonicParsing="false" onAction="#handleEditBase" text="Edit base">
                            <HBox.margin>
@@ -34,7 +43,7 @@
                         <Button fx:id="btn_settings" mnemonicParsing="false" onAction="#handleSettings" text="Settings" />
                         <Label prefHeight="15.0" prefWidth="10.0" />
                         <Button fx:id="runButton" mnemonicParsing="false" onAction="#handleRun" prefHeight="23.0" prefWidth="84.0" text="Run" />
-                        <Label prefHeight="15.0" prefWidth="10.0" />
+                        <Label prefHeight="15.0" prefWidth="5.0" />
                      </children>
                   </HBox>
                </children>
