--- a/src/main/java/com/opaleye/snackntm/MainStage.fxml
+++ b/src/main/java/com/opaleye/snackntm/MainStage.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
@@ -55,7 +56,7 @@
       </ToolBar>
       <ScrollPane fx:id="fwdPane" layoutX="170.0" layoutY="230.0" prefHeight="170.0" prefWidth="879.0" />
       <ScrollPane fx:id="revPane" layoutX="170.0" layoutY="438.0" prefHeight="170.0" prefWidth="879.0" />
-      <Label layoutX="170.0" layoutY="76.0" prefHeight="18.0" prefWidth="126.0" text="Alignment">
+      <Label layoutX="167.0" layoutY="67.0" prefHeight="18.0" prefWidth="126.0" text="Alignment">
          <font>
             <Font name="System Bold" size="14.0" />
          </font></Label>
@@ -63,7 +64,9 @@
       <Label fx:id="fwdTraceFileLabel" layoutX="289.0" layoutY="208.0" prefHeight="15.0" prefWidth="660.0" />
       <Label layoutX="172.0" layoutY="411.0" text="Reverse Trace File : " />
       <Label fx:id="revTraceFileLabel" layoutX="289.0" layoutY="411.0" prefHeight="15.0" prefWidth="660.0" />
-      <ScrollPane fx:id="alignmentPane" layoutX="170.0" layoutY="100.0" prefHeight="105.0" prefWidth="907.0" />
+      <ScrollPane fx:id="alignmentPane" layoutX="261.0" layoutY="86.0" prefHeight="119.0" prefWidth="816.0" />
+      
+      
       <Button fx:id="removeFwd" layoutX="951.0" layoutY="204.0" mnemonicParsing="false" onAction="#handleRemoveFwd" prefHeight="23.0" prefWidth="126.0" text="Remove Fwd Trace" />
       <Button fx:id="removeRev" layoutX="951.0" layoutY="407.0" mnemonicParsing="false" onAction="#handleRemoveRev" prefHeight="23.0" prefWidth="126.0" text="Remove Rev Trace" />
       <ScrollPane fx:id="variantListPane" layoutX="170.0" layoutY="637.0" prefHeight="195.0" prefWidth="907.0">
@@ -137,16 +140,17 @@
       <Button fx:id="fwdZoomOutButton" layoutX="1050.0" layoutY="315.0" mnemonicParsing="false" onAction="#handleFwdZoomOut" prefHeight="83.0" prefWidth="28.0" text="-" />
       <Button fx:id="revZoomInButton" layoutX="1050.0" layoutY="438.0" mnemonicParsing="false" onAction="#handleRevZoomIn" prefHeight="83.0" prefWidth="28.0" text="+" />
       <Button fx:id="revZoomOutButton" layoutX="1050.0" layoutY="523.0" mnemonicParsing="false" onAction="#handleRevZoomOut" prefHeight="83.0" prefWidth="28.0" text="-" />
-      <ScrollPane layoutX="7.0" layoutY="100.0" prefHeight="733.0" prefWidth="150.0">
+      <ScrollPane layoutX="8.0" layoutY="86.0" prefHeight="747.0" prefWidth="150.0">
          <content>
-            <ListView fx:id="sampleListView" prefHeight="726.0" prefWidth="145.0" />
+            <ListView fx:id="sampleListView" prefHeight="743.0" prefWidth="145.0" />
          </content>
       </ScrollPane>
-      <Separator layoutX="157.0" layoutY="65.0" orientation="VERTICAL" prefHeight="779.0" prefWidth="6.0" />
-      <Label layoutX="8.0" layoutY="76.0" prefHeight="18.0" prefWidth="126.0" text="Sample List">
+      <Separator layoutX="158.0" layoutY="63.0" orientation="VERTICAL" prefHeight="781.0" prefWidth="5.0" />
+      <Label layoutX="8.0" layoutY="67.0" prefHeight="18.0" prefWidth="126.0" text="Sample List">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
+      <GridPane fx:id="headerPane" layoutX="167.0" layoutY="88.0" prefHeight="115.0" prefWidth="92.0" />
    </children>
 </AnchorPane>
