--- a/src/main/java/com/opaleye/snackntm/MainStage.fxml
+++ b/src/main/java/com/opaleye/snackntm/MainStage.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
@@ -121,8 +122,9 @@
                 <TableColumn prefWidth="83.0" text="Score" />
                </columns>
             </TableView>
-            <Label fx:id="icSeqLabel" layoutX="14.0" layoutY="750.0" prefHeight="15.0" prefWidth="280.0" text="aaaa" />
-            <Label fx:id="chimaeraSeqLabel" layoutX="14.0" layoutY="770.0" prefHeight="15.0" prefWidth="280.0" text="aaaa"/>
+            <Label fx:id="icSeqLabel" layoutX="14.0" layoutY="750.0" prefHeight="15.0" prefWidth="280.0" />
+            <Label fx:id="chimaeraSeqLabel" layoutX="14.0" layoutY="770.0" prefHeight="15.0" prefWidth="280.0" />
+            <ProgressBar fx:id="progressBar" layoutX="11.0" layoutY="785.0" prefHeight="18.0" prefWidth="280.0" progress="0.0" />
          </children>
       </AnchorPane>
       <Label layoutX="170.0" layoutY="619.0" prefHeight="18.0" prefWidth="150.0" text="Result">
