--- a/src/main/java/com/opaleye/snackntm/tsv.fxml
+++ b/src/main/java/com/opaleye/snackntm/tsv.fxml
@@ -7,6 +7,6 @@
 <AnchorPane prefHeight="700.0" prefWidth="1128.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button fx:id="okButton" layoutX="423.0" layoutY="672.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="364.0" text="Ok" />
-      <TextArea fx:id="ta_csv" layoutX="14.0" layoutY="14.0" prefHeight="650.0" prefWidth="1106.0" />
+      <TextArea fx:id="ta_tsv" layoutX="14.0" layoutY="14.0" prefHeight="650.0" prefWidth="1106.0" />
    </children>
 </AnchorPane>
